test/test_wrong_arg_number_has_forward/test_wrong_arg_number_has_forward.mvs
[fwd] func a(b: int, c: bool);
func a(b: int) {}
